# rando

./: .gitignore  Cargo.toml  README.md  test_output.txt  test_output_levene.txt  test_output_levene_2.txt  test_output_poisson.txt
src/: hypo_tests.rs  lib.rs  main.rs  models.rs  pipeline.rs  plotting.rs  stats.rs  tests_verification.rs  units.rs
src/clusters/: mod.rs
src/distrs/: cauchy.rs  chi_square.rs  empirical.rs  exponential.rs  gamma.rs  laplace.rs  log_normal.rs  logistic.rs  mixture.rs  mod.rs  negative_binomial.rs  normal.rs  poisson.rs  smooth_kernel.rs  student_t.rs  weibull.rs
src/hypo_tests/: correlation.rs  mod.rs  normality.rs  t_test.rs  z_test.rs
